C2.L3.HW2.1 is completed.

--- a/src/C2.L3.HW.md
+++ b/src/C2.L3.HW.md
@@ -67,6 +67,14 @@
 
 ### Задание 1
 
+Добавьте во все транспортные средства поле "Количество топлива в процентах" (fuel percentage), которое может изменяться от 0,00 до 100,00. Например, значение поля, равное 57,49% будет считаться корректным.
+
+Подсказка:
+<br/>
+Не забудьте настроить проверку данных данного поля: поле не должно содержать буквенные значения, null или быть пустым.
+
+Настройте доступ к полю таким образом, чтобы классы-потомки могли изменять это поле, но поле было бы недоступно для изменения извне, а только для чтения.
+
 Добавьте в класс transport абстрактный метод заправки (refill).
 
 Добавьте в классы car, train и bus данный метод:
